fixed logo not changing on dark mode bug

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -11,5 +11,5 @@
 }
 
 .linkInnerContainer {
-  @apply flex justify-end gap-4 text-xs md:text-base;
+  @apply flex justify-center md:justify-end gap-4 text-xs md:text-base;
 }
